# transcribe

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/speech/: __main__.py  fastapi_app.py
src/speech.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/speech/router/: router.py
src/speech/services/: transcriber.py
src/transcribe/: __main__.py  fastapi_app.py
src/transcribe/router/: router.py
src/transcribe/services/: transcriber.py
