[project]
name = "transcribe-service"
version = "0.1.0"
description = "Scriptora Transkription von Sprache zu Text"
authors = [{ name = "Caleb Gyamfi" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "faster-whisper",
    "torch",
    "pydantic>=2.0",
]

[project.scripts]
transcribe = "transcribe.__main__:main"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
build = ["hatch", "hatchling"]

[tool.hatch.build.targets.sdist]
include = ["src/transcribe"]

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]

[tool.uv]
default-groups = "all"